--- a/Project6.vcxproj
+++ b/Project6.vcxproj
@@ -139,8 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="issue-2.cpp" />
+    <ClCompile Include="issue1.cpp" />
+    <ClCompile Include="issue2.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="issue1.h" />
+    <ClInclude Include="issue2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
